<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/trending_nav"
        android:icon="@drawable/ic_trending"
        android:title="@string/trending" />

    <item
        android:id="@+id/movie_nav"
        android:icon="@drawable/ic_movie"
        android:title="@string/movies" />

    <item
        android:id="@+id/tvshow_nav"
        android:icon="@drawable/ic_tv_show"
        android:title="@string/tv_show" />

    <item
        android:id="@+id/favorite_nav"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorite" />
</menu>